c4prj2_input/grade.txt
Grading at Thu Jun 25 05:37:42 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c:7:22: error: unknown type name ‘future_card_t’
 void add_future_card(future_card_t *fc,size_t index,card_t * ptr){
                      ^
future.c: In function ‘future_cards_from_deck’:
future.c:20:17: error: ‘n_decks’ undeclared (first use in this function)
   for(int i=0;i<n_decks;i++){
                 ^
future.c:20:17: note: each undeclared identifier is reported only once for each function it appears in
future.c:22:30: error: request for member ‘value’ in something not a structure or union
       (*fc).decks[i].cards[j].value=(*deck->cards[i]).value;
                              ^
future.c:23:30: error: request for member ‘value’ in something not a structure or union
       (*fc).decks[i].cards[j].value=(*deck->cards[i]).value;
                              ^
Compilation of future.c failed

Overall Grade: F
